# ai_claude

./: .gitignore  README.md  env.data  main.py  paralelization.py  pyproject.toml  task_router.py
2-autonomous/: agent.py  functions.py  main.py
3-pipelines/: agent.py  main.py
4-agent-tools/: agent.py  functions.py  main.py  schemas.json
5-handoff/: agent.py  main.py
6-async/: agent.py  functions.py  main.py  schemas.json
7-async-tools/: agent.py  main.py
8-parallel-agent/: agent.py  main.py
dspy/: chain-of-thought.py  emotion-classifier.py  example-objects.py  fact-check.py  filtering.py  inputs-labels.py  mini-dataset.py  multi-chain-comparison.py  multi-input-signature.py  program-of-thought.py  react.py  sentiment.py  signature.py  solution.py  solution2.py  solution3.py  summarization-signature.py
tools/: functions.py  main.py  schemas.json
